# creds-on-chain-private

./: .gitignore  Anchor.toml  README.md  package.json
.github/workflows/: deploy-program.yml
backend/: package-lock.json  package.json  tsconfig.json
backend/migrations/: 001_create_proofs_private.sql  run_migration.js  verify_table.js
backend/src/: index.ts
backend/src/routes/: profile.ts  profiles.ts  register.ts  report.ts  search.ts  translate.ts  unlock.ts  upload.ts
backend/src/services/: aiAnalyzer.ts  cidStore.ts  db.ts  embeddings.ts  githubFetcher.ts  hashUtils.ts  ipfsClient.ts  magicblockPayments.ts  ocrExtractor.ts  pdfParser.ts  solanaVerifier.ts  translator.ts  validateEnv.ts
backend/src/types/: index.ts  qvac.d.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  WalletProviders.tsx  index.css  main.tsx
frontend/src/components/: ExplorerLink.tsx  Header.tsx  LogoCoin3D.tsx  ProgressSteps.tsx  ScoreRing.tsx  ShareButton.tsx  SkillRadar.tsx  SkillTag.tsx  SolanaBackground.tsx
frontend/src/lib/: api.ts  hash.ts  solana.ts  theme.tsx
frontend/src/pages/: BrowsePage.tsx  LandingPage.tsx  ProfilePage.tsx  UploadPage.tsx
frontend/src/types/: index.ts
programs/ai-skill-passport/: Cargo.toml
programs/ai-skill-passport/src/: lib.rs
screens/dark/data_ingestion/: code.html
screens/dark/global_header_dark_mode/: code.html
screens/dark/landing_page_dark_mode_fix/: code.html
screens/dark/locked_profile_dark_mode_refined/: code.html
tests/: ai-skill-passport.ts
(+6 files in other folders)
