[package]
name = "ai-skill-passport"
version = "0.1.0"
description = "AI Skill Passport on-chain proof program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ai_skill_passport"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.13.0", features = ["spl"] }
