[package]
name = "ai-skill-passport"
version = "0.1.0"
description = "AI Skill Passport on-chain proof program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ai_skill_passport"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
# NOTE: ephemeral-rollups-sdk >= 0.6 requires solana-program v2 which is
# incompatible with anchor-lang 0.32 (uses solana-program v1). ER integration
# is achieved at the frontend layer via getMagicRouterConnection().
# To add on-chain ER hooks, upgrade anchor-lang to >=0.31 + solana-program v2.
